# val-insta-locker

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  ErrorBoundary.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
src-tauri/src/valorant/: agents.rs  api.rs  lockfile.rs  mod.rs
src/components/AgentGrid/: AgentGrid.tsx
src/components/ControlPanel/: ControlPanel.tsx
src/components/LockPanel/: LockPanel.tsx
src/components/Logs/: Logs.tsx
src/components/MacroPanel/: MacroPanel.tsx
src/components/Settings/: Settings.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/StatusBar/: StatusBar.tsx
