[package]
name = "val-insta-locker"
version = "0.1.7"
description = "Valorant Instalocker — Tauri + React"
authors = ["you"]
edition = "2021"

[lib]
name = "val_insta_locker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
base64 = "0.22"
log = "0.4"
